fix merge button on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -656,6 +656,10 @@ MOBILE MODE CSS
         width:3vmax;
         height:3vmax;
     }
+    .merge-course {
+        width:3vmax;
+        height:3vmax;
+    }
     .table-title {
         width: 89vw;
     }
